<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="289dp"
            android:layout_height="104dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo02"
            app:srcCompat="@drawable/logo02"
            android:contentDescription="@string/app_name" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:padding="18dp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="18dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/button"
            android:drawableLeft="@drawable/ic_fingerprint_black_24dp"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/link_contact"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/contactOwner"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/tvColor"
            android:textFontWeight="800"/>

    </LinearLayout>
</ScrollView>