<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addSalesDetails"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_person"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="-100dp"
        android:elevation="10dp"
        android:padding="16dp"
        android:src="@drawable/person"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_person_name"
        android:textAlignment="center"
        android:text="@string/MinWelcome"
        android:layout_gravity="right"
        android:paddingRight="50dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/ic_launcher_background"
        tools:ignore="RtlCompat,RtlHardcoded" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:pointerIcon="zoom_in"
        android:progress="@android:integer/config_mediumAnimTime"
        android:progressBackgroundTint="@color/colorPrimary"
        android:progressBackgroundTintMode="screen"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDF6E5"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="80dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_id"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/From"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/To"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/sp_To"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:padding="8dp"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_registration_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/registration_date"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ed_registration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="date"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_category"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/Category"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/sp_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:padding="8dp"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/Product"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/sp_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:padding="8dp"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_pri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/Price"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/amount"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ed_amount"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:padding="8dp" />
                <TextView
                    android:id="@+id/txt_av"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/Available"
                    android:textSize="16dp" />
                <TextView
                    android:id="@+id/txt_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_user_region"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/Total"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ed_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_Discount"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/Discount"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ed_Discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/txt_after_discount"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/AfterDiscount"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/ed_afterdiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="24dp">

                <Button
                    android:id="@+id/BTN_Add"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:drawableLeft="@drawable/ic_archive_black_24dp"
                    android:padding="8dp"
                    android:text="@string/insert"
                    android:textColor="#FFFFFF"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/BTN_Calculate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@color/button"
                    android:drawableLeft="@drawable/ic_attach_money_black_24dp"
                    android:padding="8dp"
                    android:text="@string/calculate"
                    android:textColor="#ffffff"

                    android:textSize="12dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>